# HGamGamStar

./: .gitmodules  CMakeLists.txt  HggStarEventSelection.md  README.md
HGamGamStar/: AngularPosition.h  ExtraHggStarObjects.h  HggStarCommon.h  HggStarCutflowAndMxAOD.h  HggStarVariables.h  HiggsGamGamStarCutflowAndMxAOD.h  MergedElectronID.h  MergedElectronID_v2.h  MergedElectronID_v2F.h  MergedElectronID_v3.h  MergedElectronMxAOD.h  MxAODTool.h  RadiativeZCutflowAndMxAOD.h  SimpleVertexFit.h  TrackElectronMap.h  TrackHandler.h  TrackModel.h  ZyCutflowAndMxAOD.h  ZyUnfoldingInput.h  ZyyUnfoldingInput.h
Root/: ExtraHggStarObjects.cxx  HggStarCommon.cxx  HggStarCutflowAndMxAOD.cxx  HggStarVariables.cxx  HiggsGamGamStarCutflowAndMxAOD.cxx  LinkDef.h  MergedElectronID.cxx  MergedElectronID_v2.cxx  MergedElectronID_v2F.cxx  MergedElectronID_v3.cxx  MergedElectronMxAOD.cxx  MxAODTool.cxx  RadiativeZCutflowAndMxAOD.cxx  SimpleVertexFit.cxx  TrackElectronMap.cxx  TrackHandler.cxx  TrackModel.cxx  ZyCutflowAndMxAOD.cxx  ZyUnfoldingInput.cxx  ZyyUnfoldingInput.cxx
cmt/: Makefile.RootCore
data/: DeltaEtaRun2.root  DetaMasterCorrectionTool.conf  ElectronConf_Deta.conf  HggStarMxAOD.config  HggStarMxAOD_Sys.config  MergedElectronMxAOD.config  RadiativeZMxAOD.config  WZyMxAOD.config  ZZyMxAOD.config  ZyMxAOD.config  ZySamples.config  ZyVBSMxAOD.config  Zy_data.txt  Zy_mc16a.txt  Zy_mc16d.txt  Zy_mc16e.txt  ZyyMxAOD.config  combPRW_mc16a.root  combPRW_mc16d.root  combPRW_mc16e.root  meta_345775.h  meta_364865.h  meta_366146.h  meta_700195.h  ysyPartonShowerRWHists.root  yystarPRW_mc16a.root  yystarPRW_mc16d.root  yystarPRW_mc16e.root
data/input/: data15_13TeV.txt  data16_13TeV.txt  data17_13TeV.txt  data18_13TeV.txt  mc16a_HIGG1D2.txt  mc16d_HIGG1D2.txt  mc16e_HIGG1D2.txt
scripts/: HelperTools.py  runJob.py  runJob_condor_resubmit_failed  runJob_condor_resubmit_killed  runJob_merge
util/: runHggStarCutflowAndMxAOD.cxx
